# nailforge

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt
src/: nailforge.cpp  nailforge.hpp
src/Alphabet/: Alphabet.cpp  Alphabet.hpp  LetterConversion.cpp  LetterConversion.hpp
src/PhmmProcessor/: PhmmProcessor.cpp  PhmmProcessor.hpp
src/SeedExtension/: SeedExtension.cpp  SeedExtension.hpp
src/StringTree/: StringTree.cpp  StringTree.hpp
src/StringTree/MaxExtensionTable/: MaxExtensionTable.cpp  MaxExtensionTable.hpp
test/: CMakeLists.txt  benchmark.cpp
